--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "lodash": "^4.17.3",
     "node-schedule": "^1.2.0",
     "nodemailer": "^2.7.0",
     "request": "^2.79.0"
